--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
     "/js/vendor.js": "/js/vendor.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/css/login.css": "/css/login.css",
     "/js/manifest.js": "/js/manifest.js"
 }
